--- a/App13/App13.Android/Properties/AndroidManifest.xml
+++ b/App13/App13.Android/Properties/AndroidManifest.xml
@@ -3,5 +3,20 @@
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-	<application android:label="Bakun Express load tracker.Android" android:icon="@mipmap/icon"></application>
+	<uses-permission android:name="android.permission.INTERNET" />
+	<application android:label="Bakun Express load tracker.Android" android:icon="@mipmap/icon">
+		<receiver
+				android:name="com.google.firebase.iid.FirebaseInstanceIdInternalReceiver"
+				android:exported="false" />
+		<receiver
+				android:name="com.google.firebase.iid.FirebaseInstanceIdReceiver"
+				android:exported="true"
+				android:permission="com.google.android.c2dm.permission.SEND">
+			<intent-filter>
+				<action android:name="com.google.android.c2dm.intent.RECEIVE" />
+				<action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+				<category android:name="${applicationId}" />
+			</intent-filter>
+		</receiver>
+	</application>
 </manifest>
