--- a/App13/App13.Android/App13.Android.csproj
+++ b/App13/App13.Android/App13.Android.csproj
@@ -121,5 +121,10 @@
       <Name>App13</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\Notification.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
