--- a/App13/App13/App13.csproj
+++ b/App13/App13/App13.csproj
@@ -24,5 +24,8 @@
     <EmbeddedResource Update="LoginMaster.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Notification.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
