--- a/App13/App13.Android/Properties/AndroidManifest.xml
+++ b/App13/App13.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.App13" android:installLocation="preferExternal">
-	<uses-sdk android:minSdkVersion="24" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.backunexpress.LoadTracker" android:installLocation="preferExternal">
+	<uses-sdk android:minSdkVersion="26" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.INTERNET" />
